letra en cursos

--- a/css/sobre__mi__diseño.css
+++ b/css/sobre__mi__diseño.css
@@ -136,6 +136,7 @@
 @media screen and (max-width:768px) {
     .container .accordion {
         width: 100%;
+        text-align: left;
     }
 
     .container .header h1 {
