--- a/css/landing__page.css
+++ b/css/landing__page.css
@@ -1,10 +1,10 @@
 .container {
   display: flexbox;
-  padding: 10rem 4%;
+  padding: 13rem 1%;
 }
 
 .landing__page {
-  height: calc(120vh - 100px);
+  height: calc(1vh - 1px);
   display: flex;
   flex-wrap: wrap;
   align-content: stretch;
@@ -121,7 +121,7 @@
   .persona {
     display: flex;
     justify-content: right;
-    margin-bottom: .5rem;
+    margin-bottom: 1px;
     text-align: right;
   }
 
@@ -149,10 +149,16 @@
     vertical-align: middle;
   }
 
+  .container {
+    display: flexbox;
+    padding: 7rem 1%;
+  }
+
   .landing__page {
+    height: calc(160vh - 1px);
     display: inline-block;
     flex-direction: column;
-    margin-bottom: .5rem;
+    margin-bottom: 1px;
     text-align: right;
   }
 
